# mllib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: _config.yml  devlog.md  index.md
examples/load_weights/: main.c  plot.py
examples/spiral/: main.c  plot.py
examples/spiral_batch/: main.c  plot.py
examples/spiral_bce/: main.c  plot.py
examples/spiral_ce/: main.c  plot.py
python/: preprocess.py  run_model.py  test_bindings.py  training.py  training_chess.py  training_test.py
python/mllib/: _bindings.py  data.py  nn.py  tensor.py
src/: arena.c  arena.h  config.h  data.c  data.h  graph.c  graph.h  main.c  node.c  node.h  optimizer.c  optimizer.h  tensor.c  tensor.h
